Disabled Csrf Security and Added Bearer Token Service'

--- a/identity-service/src/main/resources/application.properties
+++ b/identity-service/src/main/resources/application.properties
@@ -11,17 +11,17 @@ server.port=8081
 jwt.issuer=identity-service
 jwt.access-token-validity-minutes=15
 jwt.refresh-token-validity-days=14
-jwt.key-pair. private-key-location=classpath:keys/private_key.pem
+jwt.key-pair.private-key-location=classpath:keys/private_key.pem
 jwt.key-pair.public-key-location=classpath:keys/public_key.pem
 
 # -------------------------
-# ? Cookie Configuration
+# Cookie Configuration
 # -------------------------
 cookie.domain=localhost
 cookie.secure=false
 
 # -------------------------
-# ? CORS Configuration
+# CORS Configuration
 # -------------------------
 cors.allowed-origins=http://localhost:3000
 
@@ -36,5 +36,5 @@ spring.task.scheduling.thread-name-prefix=scheduler-
 # Logging Configuration
 # -------------------------
 logging.level.root=INFO
-logging.level.com.instagram. identity=DEBUG
+logging.level.com.instagram.identity=DEBUG
 logging.level.org.springframework.security=DEBUG
